# agent-safety-kit

./: .gitignore  AGENTS.md  MANIFEST.in  README-new-ru.md  README-new.md  README-ru.md  README.md  SPEC.md  agsekit  changelog.md  config-example.yaml  create_vm.sh  docs-plan.md  example.env  install_multipass.sh  integrations-tests-todo.md  nohup.out  philosophy-ru.md  philosophy.md  plan-windows-install.md  publish.sh  pyproject.toml  pytest.ini  requirements.txt  todo.md  workflow.md
agsekit_cli/: __init__.py  agents.py  ansible_runners.py  ansible_utils.py  backup.py  cli.py  cli_entry.py  config.py  daemon_backends.py  debug.py  host_tools.py  interactive.py  mounts.py  prebuilt.py  prepare_strategies.py  progress.py  provision_handlers.py  run_agent.sh  run_with_http_proxy.sh  run_with_proxychains.sh  systemd_backend.py  vm.py  vm_bundle_definitions.py  vm_bundles.py  vm_local_control_node.py  vm_prepare.py  vm_ssh_bootstrap.py
docs/: README.md  agents.md  architecture.md  backups.md  configuration.md  getting-started.md  how-to.md  install.md  known-issues.md  networking.md  philosophy.md  troubleshooting.md
docs-ru/: README.md  agents.md  architecture.md  backups.md  configuration.md  getting-started.md  how-to.md  install.md  known-issues.md  networking.md  philosophy.md  troubleshooting.md
lib/: compare_vm_properties.py  utils.sh
libs/: make_single_backup.sh
scripts/: README.md  install.sh
systemd/: agsekit-portforward.service
tests/: conftest.py  test_addmount_command.py  test_agents.py  test_agents_modules.py  test_ansible_agent_proxychains.py  (+53 more)
(+137 files in other folders)
